<resources>
    <string name="app_name">DeliveryApp</string>
    <string name="del_name">Day2Day</string>
    <string name="food_delivery_app">Goods Delivery App</string>
    <string name="get_started">Get Started</string>
    <string name="hey_there">Good Afternoon</string>
    <string name="order_now">Order now</string>
    <string name="find_your_item">Find your Item</string>
    <string name="free_breakfast">Free Breakfast</string>
    <string name="_5th_oct_31st_dec">5th Oct - 31st Dec</string>
    <string name="order">Order Items</string>
    <string name="categories">Categories</string>
    <string name="popular">Popular</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="category">Category</string>
    <string name="wishlist">Wishlist</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="Item">item</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="login_question">Already Have an Account?</string>
    <string name="register_question">No account yet?</string>
    <string name="register">Register</string>
    <string name="my_profile">Business Profile</string>
    <string name="edit_profile">Update</string>
    <string name="name">Name:</string>
    <string name="shop_name">Business Name:</string>
    <string name="shop_location">Location:</string>
    <string name="mpesa_till_no">Mpesa Till No:</string>
    <string name="business_type">Business Type:</string>
    <string name="items">Items</string>
    <string name="upload_an_item"> Add Item</string>
    <string name="no_items_uploaded_yet">No Items Uploaded Yet</string>
    <string name="recently_uploaded">Recent</string>
    <string name="no_recently_added_items">no recently Added Items</string>
    <string name="all_items">All Items</string>
    <string name="price">Price</string>
    <string name="ksh">Ksh:</string>
    <string name="add">Add</string>
    <string name="offers">Offers</string>
    <string name="support">Support</string>
    <string name="account">Account</string>
    <string name="please_click_back_again_to_exit">Click Again to Exit</string>
    <string name="submit">Submit</string>
    <string name="desc">Description</string>
    <string name="quantity">Quantity</string>
    <string name="title">Title</string>
    <string name="owner">Business Shop</string>
    <string name="profile">My Profile</string>
    <string name="phone">Phone No:</string>
    <string name="add_business">Business</string>
    <string name="View">Items</string>
    <string name="delete_confirmation">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Update</string>
    <string name="bs_profile">Business Profile</string>
</resources>