<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="16dp"
android:layout_margin="16dp"
tools:context=".activities.RegisterBusiness">


<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilBsName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/teBsName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shop_name" />
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilBsType"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tilBsName"
    >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tetBsType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/business_type" />

</com.google.android.material.textfield.TextInputLayout>
<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilBsLocation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tilBsType"
    >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tetBsLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shop_location" />

</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilBsTill"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tilBsLocation"
    >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tetBsTill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/mpesa_till_no" />

</com.google.android.material.textfield.TextInputLayout>

<Button
    android:id="@+id/btSubmit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/submit"
    android:background="@drawable/button_style"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tilBsTill" />


</androidx.constraintlayout.widget.ConstraintLayout>